--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 01.11.2024 08:32:30</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 01.11.2024 09:03:31</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -30,13 +30,7 @@
 <div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
   position: relative;
   top: -100px; 
-  visibility: hidden;"></a><br/><table class="dm"></table><br/><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
-Volba Sládků<br>
-Kozel tmavý<br>
-Cider Kingswood<br>
-<br>
-Letní zahrada<br>
-Vytápěna zimní zahrada</p><center>--></div></div></div>
+  visibility: hidden;"></a><br/><table class="dm"></table><br/></div></div>
 </td>
 </tr>
 </table>
@@ -115,7 +109,7 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <section id="Rybarna"></section><a href="#top">&#8635;</a><tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou, sojovymi klicky a zelenymi bylinkami 169</li><li>Gravlax z cerstveho norskeho lososa se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou, sojovymi klicky a zelenymi bylinkami 205</li><li>Kantonske dusene hovezi s redkvi daikon, zazvorem, ustricovou omackou a cerstvym chilli, jasminova ryze, salatek 169</li><li>Doruzova pecena veprova panenka s houbovou omackou, gratinovane brambory, salatek z cervene repy {L} 205</li><li>Bramborove halusky s brynzou a restovanymi zampiony portobello na cibulce {L} 169</li></ol>
+<ol><li>Peceny jihocesky pstruh s okurkovymi tzatziki, pohanka se smazenou cibulkou, salatek 169</li><li>Smazeny filet z cerstve bile norske tresky, stouchane brambory, salatek, citron {L} 199</li><li>Grilovany kureci kebab v tanduri marinade se zazvorem a citrony, smazena zeleninova ryze, okurkove tzatziki, salatek 169</li><li>Bramborove gnocchi s telecim ragu s brokolici, smetanou a modrym syrem {L} 199</li><li>Zapecene papriky s rajcaty a mozzarelou v lehke rajcatove omacce, pohanka se smazenou cibulkou, salatek 169</li></ol>
 </td>
 </tr>
 </table>
