--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 09.11.2024 13:42:01</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 10.11.2024 06:02:41</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -8,10 +8,10 @@
 <h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky </h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar s nudlemi, zeleninou a játrovou rýží</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Tomatová se zakysanou smetanou</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Husí kaldoun se šlehačkou a žemlovým knedlíčkem</td><td class="menuPrice">59,-</td></tr><tr><td class="menuWeight">100g</td><td class="menuName">Husí játrová paštika s brusinkami, máslem, lehkým salátem a pečenými tousty</td><td class="menuPrice">89,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky </h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar s nudlemi a zeleninou</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zelná s klobásou</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Husí kaldoun se šlehačkou a žemlovým knedlíčkem</td><td class="menuPrice">59,-</td></tr><tr><td class="menuWeight">100g</td><td class="menuName">Husí játrová paštika s brusinkami, máslem, lehkým salátem a pečenými tousty</td><td class="menuPrice">89,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažené masové karbanátky, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřové kostky na paprice, těstoviny vřetena</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí guláš s cibulí a feferonkou, kynuté houskové knedlíky</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí rizoto, strouhaný sýr, kyselá okurka</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava:150g Steak z kuřecích prsou gratinovaný třemi druhy sýra, grusetková roláda plněná šunkou, zakysaná smetana</td><td class="menuPrice">189,-</td></tr><tr><td class="menuWeight">1Ks</td><td class="menuName">Náš kynutý koláč s tvarohovým krémem, meruňkou a drobenou </td><td class="menuPrice">25,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Quasedilla plněná plátkovaným vepřovým karé, sýrem, anglickou slaninou, sušenými rajčaty a jalapeňos papričkami, hranolky, tatarka</td><td class="menuPrice">185,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečený hovězí rosbíf na pepřové redukci, smažené bramborové plátky, cibule, beraní roh, hořčice, volské oko</td><td class="menuPrice">172,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové kotlety bez kosti na houbové omáčce, restované špecle</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninový salát z trhaných listů ochucený olivovým dresinkem, grilované kousky lososa, citron</td><td class="menuPrice">164,-</td></tr><tr><td class="menuWeight">500g</td><td class="menuName">Čtvrtka pečené kachny, červené marmeládové zelí a bílé zelí, kynuté houskové a bramborové knedlíky</td><td class="menuPrice">209,-</td></tr><tr><td class="menuWeight">1000g</td><td class="menuName">Čtvrtka pečené husy, červené marmeládové zelí a bílé zelí, kynuté houskové a bramborové knedlíky</td><td class="menuPrice">349,-</td></tr><tr><td class="menuWeight">1ks</td><td class="menuName">Náš kynutý knedlík plněný malinami na vanilkové omáčce, šlehačka, karamel</td><td class="menuPrice">65,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 139,- nebo 150g  Mix gril za 139,-  (pro nesledující za 184,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledován našeho instagramu na telefonu </td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Mix gril z vepřové panenky, kuřecích prsou, vepřové pečeně a klobásky s cibulí, smažené plátky brambor, volské oko</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dnes na čepu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Odnes si domů plechovková piva za super ceny. Staropramen 10° za 14,-Kč. Staropramen 11° za 16,- Kč a Staropramen 12° za 18,-Kč.  </td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Arnoštová hořká 10° alk. 4,3%  spodně kvašené - pivovar ,,Pardubice´´</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Tanková 11° ležák alk. 4,7%  spodně kvašené - pivovar Staropramen</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Nové pivo od Staropramenu - Premiant extrachmel ležák, IBU 35, alk. 4,5% </td><td class="menuPrice">52,-</td></tr><tr><td class="menuWeight">0,5</td><td class="menuName">Fresh HOP 12° - 4,7% alkoholu, 37 IBU - spodně kvašené  - pivovar LIBERTAS </td><td class="menuPrice">64,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">72,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pokrmy obsahují alergeny. Informace o výskytu konkrétních alergenů v pokrmu žádejte u obsluhy</td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažené řízky z kuřecích prsou, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Špikovaný hovězí váleček na slanině, dušená jasmínová rýže</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Křenová omáčka s uzeným masem, kynuté houskové knedlíky</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky maštěné cibulkou, červené zelí</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: Dorůžova pečená vepřová panenka, mrkvové pyré s máslem a sýrem, grilovaná brokolice</td><td class="menuPrice">185,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny  "Aglio Olio" s filírovanou vepřovou panenkou, strouhaný parmazán</td><td class="menuPrice">166,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené rybí file, vařené brambory s máslem a šnitlíkem, tatarka, citron</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">300g</td><td class="menuName">Steak z vepřové kotlety bez kosti na jemné smetanové omáčce s barevným pepřem, hranolky, volské oko</td><td class="menuPrice">210,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů se zeleninou ochucený majonézovým dresinkem, kousky tuňáka z grilu, vařené vejce</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight">500g</td><td class="menuName">Čtvrtka pečené kachny, červené marmeládové zelí a bílé zelí, kynuté houskové a bramborové knedlíky</td><td class="menuPrice">209,-</td></tr><tr><td class="menuWeight">1000g</td><td class="menuName">Čtvrtka pečené husy, červené marmeládové zelí a bílé zelí, kynuté houskové a bramborové knedlíky</td><td class="menuPrice">349,-</td></tr><tr><td class="menuWeight">1ks</td><td class="menuName">Náš kynutý knedlík plněný malinami na vanilkové omáčce, šlehačka, karamel</td><td class="menuPrice">65,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 139,- nebo 150g  Mix gril za 139,-  (pro nesledující za 184,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledován našeho instagramu na telefonu </td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Mix gril z vepřové panenky, kuřecích prsou, vepřové pečeně a klobásky s cibulí, smažené plátky brambor, volské oko</td><td class="menuPrice">139,-/184,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Naše dezerty</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Odnes si domů plechovková piva za super ceny. Staropramen 10° za 14,-Kč. Staropramen 11° za 16,- Kč a Staropramen 12° za 18,-Kč.  </td><td class="menuPrice"></td></tr><tr><td class="menuWeight">0,5</td><td class="menuName">Nové pivo od Staropramenu - Premiant extrachmel ležák, IBU 35, alk. 4,5% </td><td class="menuPrice">52,.</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Tanková 11° ležák alk. 4,7%  spodně kvašené - pivovar Staropramen</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Arnoštová hořká 10° alk. 4,3%  spodně kvašené - pivovar ,,Pardubice´´</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Fresh HOP 12° - 4,7% alkoholu, 37 IBU - spodně kvašené  - pivovar LIBERTAS </td><td class="menuPrice">64,-</td></tr><tr><td class="menuWeight">0,3-0,3l</td><td class="menuName">Citronáda</td><td class="menuPrice">27,-/34,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -26,7 +26,13 @@
 <script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer1_a.js?v=" + Date.now() + "'><\/script>");</script></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
   position: relative;
   top: -100px; 
-  visibility: hidden;"></a><br/><table class="dm"></table><br/></div></div>
+  visibility: hidden;"></a><br/><table class="dm"></table><br/><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
+Volba Sládků<br>
+Kozel tmavý<br>
+Cider Kingswood<br>
+<br>
+Letní zahrada<br>
+Vytápěna zimní zahrada</p><center>--></div></div></div>
 </td>
 </tr>
 </table>
@@ -36,7 +42,7 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–13:30</em></div>
-<div class="nadpis">Sobota 9.11.2024 </div>
+<div class="nadpis">Neděle 10.11.2024 </div>
 <ul>
 <li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
@@ -49,7 +55,7 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Sobota 9.11.2024 </div>
+<div class="nadpis">Neděle 10.11.2024 </div>
 <ul>
 <li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
@@ -72,74 +78,8 @@
 <div class="inner">
 <h4 class="headline">POLEDNÍ MENU</h4>
 <div class="bookmarks cond">
-<div class="item js-bookmark">
-<a class="link js-bookmark-switcher" href="#day_23644">Pátek 08. 11.</a>
 </div>
-</div>
-<table class="list js-bookmark-block" id="day_23644">
-<tr>
-<td class="volume"></td>
-<td class="name">
-<span class="title cond">Drůbeží vývar </span>
-<span class="allergen">(A: 9)</span>
-<p class="desc">s masem a zeleninou                              
-
-</p>
-</td>
-<td class="price cond">
-        55 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Hovězí rajská omáčka</span>
-<span class="allergen">(A: 1, 3, 7)</span>
-<p class="desc">s houskovým knedlíkem </p>
-</td>
-<td class="price cond">
-        179 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Kapustový karbanátek, </span>
-<span class="allergen">(A: 1, 3, 7)</span>
-<p class="desc">vařené brambory a tatarská omáčka </p>
-</td>
-<td class="price cond">
-        159 Kč    </td>
-</tr>
-<tr>
-<td class="volume">250g</td>
-<td class="name">
-<span class="title cond">Halušky s brynzou </span>
-<span class="allergen">(A: 1, 3, 7)</span>
-<p class="desc">a restovanou slaninou</p>
-</td>
-<td class="price cond">
-        159 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Vepřové výpečky se špenátem, </span>
-<span class="allergen">(A: 1, 3, 7)</span>
-<p class="desc">bramborový knedlík</p>
-</td>
-<td class="price cond">
-        169 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Hovězí cheesburger </span>
-<span class="allergen">(A: 1, 3, 7)</span>
-<p class="desc">s křehkou zeleninou, slanina, cibule, hranolky a coleslaw</p>
-</td>
-<td class="price cond">
-        199 Kč    </td>
-</tr>
-</table>
+<p class="no-meals">Každý pracovní den je pro vás v naší Šalandě nachystáno polední menu. Ne vždy ho ale stačíme nahrát na web.</p>
 </div>
 </section>
 </td>
