--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.11.2024 08:32:47</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.11.2024 09:03:44</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -27,13 +27,7 @@
 <div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
   position: relative;
   top: -100px; 
-  visibility: hidden;"></a><br/><table class="dm"></table><br/><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
-Volba Sládků<br>
-Kozel tmavý<br>
-Cider Kingswood<br>
-<br>
-Letní zahrada<br>
-Vytápěna zimní zahrada</p><center>--></div></div></div>
+  visibility: hidden;"></a><br/><table class="dm"></table><br/></div></div>
 </td>
 </tr>
 </table>
@@ -112,7 +106,7 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <section id="Rybarna"></section><a href="#top">&#8635;</a><tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny jihocesky pstruh s omackou z pecenych paprik, smazena ryze s kvetakem a zeleninou, salatek 169</li><li>Peceny filet z cerstve prazmy s omackou z pecenych paprik, smazena ryze s kvetakem a zeleninou, salatek 205</li><li>Kantonske hovezi nudlicky s kapustou, zazvorem, chilli, zelenymi bylinkami a klicky, jasminova ryze 169</li><li>Smazene rizecky z teleci kyty, stouchane brambory s porkem, rajcatovy salatek s cervenou cibulkou, citron {L} 199</li><li>Maghrebska saksuka s vejci, rajcaty, paprikami a balkanskym syrem, pohanka se smazenou cibulkou, salatek 169</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s omackou salsa verde, stredomorsky fusilli salat s rajcaty, paprikami a zelenymi bylinkami {L} 169</li><li>Peceny filet z cerstveho morskeho dasa s omackou salsa verde, stredomorsky fusilli salat s rajcaty, paprikami a zelenymi bylinkami {L} 205</li><li>Burrito s mexickym carnitas {pikantni trhane veprove} a goudou, smazena zeleninova ryze, salatek {L} 169</li><li>Spagety s nudlickami srnci kyty, kapustou, bylinkovym pestem a krupavou cibulkou {L} 199</li><li>Indicke badzi {cizrnovo-cibulove smazenky} s panc phoron, salsa z cerstvych rajcat, jahly, salatek 169</li></ol>
 </td>
 </tr>
 </table>
